make email an anchor tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1022,6 +1022,10 @@ section .container {
 	background: rgba(255, 255, 255, 0.08);
 }
 
+.contact .info-box a {
+	color: #fff;
+}
+
 .contact .info-box i.bx {
 	font-size: 24px;
 	color: var(--primary);
